# AI

./: .gitignore  AGENTS.md
blhx-monitor/: Cargo.toml  README.md  known_links.json
blhx-monitor/logs/: 2026-05-16-2026年1月15日10_00港区改建.md  2026-05-16-2026年1月22日10_00港区改建.md  2026-05-16-2026年1月29日10_00港区改建.md  2026-05-16-2026年1月8日10_00港区改建.md  2026-05-16-2026年2月12日10_00港区改建.md  2026-05-16-2026年2月26日10_00港区改建.md  2026-05-16-2026年2月5日10_00港区改建.md  2026-05-16-2026年3月12日10_00港区改建.md  2026-05-16-2026年3月19日10_00港区改建.md  2026-05-16-2026年3月26日10_00港区改建.md  2026-05-16-2026年4月17日10_00港区改建.md  2026-05-16-2026年4月17日服务器新增预告.md  2026-05-16-2026年4月23日10_00港区改建.md  2026-05-16-2026年4月30日10_00港区改建.md  2026-05-16-2026年4月9日10_00港区改建.md  2026-05-16-2026年5月14日10_00港区改建.md  2026-05-16-2026年5月7日10_00港区改建.md  2026-05-16-2026年5月末大型活动预告.md  2026-05-16-【2017~2026年游戏活动时间表】.md
blhx-monitor/src/: main.rs
data/: proxy-manager.db
docs/knownledge/: docker-mirror-sources.md
docs/node-manager/: design.md  usage.md
docs/proxy-manager/: design.md  plan.md
mdocs/: .dockerignore  Dockerfile  README.md  config.yaml  docker-compose.yml  main.py  requirements.txt
mdocs/app/: config.py  renderer.py  scanner.py  search.py  watcher.py
mdocs/example_docs/: index.md
mdocs/static/: style.css
mdocs/templates/: base.html  index.html  search.html
node-manager/: README.md  build.sh  docker-compose.yml
node-manager/agent/: Cargo.toml  deploy.sh
proxy-manager/: .dockerignore  Dockerfile  README.md  config.py  config.yaml  database.py  docker-compose.yml  main.py  proxy.py  requirements.txt  scanner.py
(+99 files in other folders)
